--- a/pages/VF_CustomOLIEdit.page
+++ b/pages/VF_CustomOLIEdit.page
@@ -1,21 +1,18 @@
 <apex:page id="customMultiLine" standardController="Opportunity" extensions="CLS_CustomProductAddition" showHeader="true" sidebar="true">
-
+    
     <style>
         .dateFormat{
-            display: none;
+        display: none;
         }
         .pbTitle{
-            display: none;
+        display: none;
         }
     </style>
-
-    <apex:sectionHeader title="Add Products for" subtitle="{!Opportunity.Name}" description="Add products to this opportunity from <b>{!pbName}</b> price book"/>
-<!--
+    
+    <apex:sectionHeader title="Add Products for" subtitle="{!Opportunity.Name}" description="Add products to this opportunity from <b>{!pbName} </b> price book"/>
     <apex:pageMessages id="msgs"/>
-
     <apex:form >
         <apex:pageBlock >
-
             <apex:pageBlockButtons style="text-align: center;">
                 <apex:actionStatus id="save_status">
                     <apex:facet name="stop">
@@ -25,40 +22,31 @@
                         </apex:outPutPanel>
                     </apex:facet>
                     <apex:facet name="start">
-                        <apex:outPutText value="processing...."/>
+                        <apex:outPutText value="Please wait..."/>
                     </apex:facet>
                 </apex:actionStatus>
             </apex:pageBlockButtons>
-
-
+            
             <apex:pageBlockTable value="{!OLIs}" var="oli">
-
+                
                 <apex:column headerValue="Product" value="{!prodNames[oli.PriceBookEntryID]}"/>
-
+                
                 <apex:column headerValue="Quantity">
                     <apex:inputField value="{!oli.Quantity}"/>
                 </apex:column>
-
-                <apex:column headerValue="Currency" value="{!opp_currency}"/>
-
                 <apex:column headerValue="Sales Price">
                     <apex:inputField value="{!oli.UnitPrice}"/>
                 </apex:column>
-                <apex:column headerValue="Revenue Start Date">
+                <apex:column headerValue="{!oli.Revenue_Start_Date__c}">
                     <apex:inputField value="{!oli.Revenue_Start_Date__c}"/>
                 </apex:column>
                 <apex:column headerValue="Revenue Months">
                     <apex:inputField value="{!oli.Revenue_Months__c}"/>
                 </apex:column>
-
-                <apex:column headerValue="Date [{!TODAY()}]">
+                <!--apex:column headerValue="Date [{!TODAY()}]">
                     <apex:inputField value="{!oli.ServiceDate}"/>
-                </apex:column>
-
-
+                </apex:column-->
             </apex:pageBlockTable>
-
         </apex:pageBlock>
     </apex:form>
--->
 </apex:page>
