--- a/pages/VF_CustomOLIPicker.page
+++ b/pages/VF_CustomOLIPicker.page
@@ -1,25 +1,125 @@
 <apex:page id="pickProducts" standardController="Opportunity" extensions="CLS_CustomProductAddition" action="{!priceBookCheck}">
-    <apex:sectionHeader title="Add Products for" subtitle="{!Opportunity.Name}"
-                        description="Enter your keyword and filter criteria, then click Search to begin your search. 
-                                     Click More filters to use more than one filter. Search results include all records that match 
-                                     both your keyword and filter entries."/>
+    <apex:outputPanel rendered="{! $User.UIThemeDisplayed == 'Theme3' }">
+        <apex:sectionHeader title="Add Products for" subtitle="{!Opportunity.Name}"
+                            description="Enter your keyword and filter criteria, then click Search to begin your search. 
+                                         Click More filters to use more than one filter. Search results include all records that match 
+                                         both your keyword and filter entries."/>
+        
+        <apex:pageMessages id="msgs"/>
+        <apex:form >
+            <apex:pageBlock title="Select Products">
+                <apex:pageBlockButtons >
+                    <apex:commandButton value="Select and Continue" action="{!gotoCustomMultiLine}"/>
+                </apex:pageBlockButtons>
+                <apex:pageBlockTable value="{!prods}" var="prod">
+                    <apex:column >
+                        <apex:inputCheckbox value="{!prod.isSelected}"/>
+                    </apex:column>
+                    <apex:column headerValue="Product Name" value="{!prod.pbe.Product2.Name}"/>
+                    <apex:column headerValue="Price" value="{!prod.pbe.UnitPrice}"/>
+                    <apex:column headerValue="Product Code" value="{!prod.pbe.ProductCode}"/>
+                    <apex:column headerValue="Product Description" value="{!prod.pbe.Product2.Description}"/>
+                </apex:pageBlockTable>
+            </apex:pageBlock>
+        </apex:form>
+    </apex:outputPanel>
     
-    <apex:pageMessages id="msgs"/>
-    <apex:form >
-        <apex:pageBlock title="Select Products">
-            <apex:pageBlockButtons >
-                <apex:commandButton value="Select and Continue" action="{!gotoCustomMultiLine}"/>
-            </apex:pageBlockButtons>
-            <apex:pageBlockTable value="{!prods}" var="prod">
-                <apex:column >
-                    <apex:inputCheckbox value="{!prod.isSelected}"/>
-                </apex:column>
-                <apex:column headerValue="Product Name" value="{!prod.pbe.Product2.Name}"/>
-                <apex:column headerValue="Price" value="{!prod.pbe.UnitPrice}"/>
-                <apex:column headerValue="Product Code" value="{!prod.pbe.ProductCode}"/>
-                <apex:column headerValue="Product Description" value="{!prod.pbe.Product2.Description}"/>
-            </apex:pageBlockTable>
-        </apex:pageBlock>
-    </apex:form>
+    <apex:outputPanel rendered="{! $User.UIThemeDisplayed == 'Theme4d' }">    
+        <apex:slds />
+        <div class="slds">    
+            <div class="demo-only" style="height: 640px;">
+                <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-slide-down-cancel slds-modal_large">
+                    <div class="slds-modal__container">
+                        <header class="slds-modal__header">
+                            <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close">
+                                <svg class="slds-button__icon slds-button__icon_large" aria-hidden="true">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close" />
+                                </svg>
+                                <span class="slds-assistive-text">Close</span>
+                            </button>
+                            <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Select Products</h2>
+                        </header>
+                        <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+                            <apex:form >
+                                <table class="slds-table slds-table--bordered slds-table--cell-buffer">
+                                    <thead>
+                                        <tr class="slds-text-title--caps">
+                                            <th scope="col">
+                                                <div class="slds-truncate" title="Product Name">Product Name</div>
+                                            </th>
+                                        </tr>
+                                        <tr class="slds-text-title--caps">
+                                            <th scope="col">
+                                                <div class="slds-truncate" title="Unit Price">Unit Price</div>
+                                            </th>
+                                        </tr>
+                                        <tr class="slds-text-title--caps">
+                                            <th scope="col">
+                                                <div class="slds-truncate" title="Product Code">Product Code</div>
+                                            </th>
+                                        </tr>
+                                        <tr class="slds-text-title--caps">
+                                            <th scope="col">
+                                                <div class="slds-truncate" title="Description">Description</div>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <apex:repeat value="{!prods}" var="prod">
+                                            <tr>
+                                                <th scope="row" data-label="Product Name">
+                                                    <div class="slds-truncate" title="Product Name">
+                                                        <apex:outputLink value="/{! prod.pbe.Product2.Id}">{! prod.pbe.Product2.name }</apex:outputLink>
+                                                    </div>
+                                                </th>
+                                                <td data-label="Revenue Start Date">
+                                                    <div class="slds-form-element">
+                                                        <div class="slds-form-element__control">
+                                                            <apex:inputfield value="{!prod.pbe.UnitPrice}" styleClass="slds-input" />
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td data-label="Revenue Start Date">
+                                                    <div class="slds-form-element">
+                                                        <div class="slds-form-element__control">
+                                                            <apex:inputfield value="{!prod.pbe.UnitPrice}" styleClass="slds-input" />
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td data-label="Revenue Start Date">
+                                                    <div class="slds-form-element">
+                                                        <div class="slds-form-element__control">
+                                                            <apex:inputfield value="{!prod.pbe.UnitPrice}" styleClass="slds-input" />
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </apex:repeat>
+                                    </tbody>
+                                </table>
+                                <apex:pageBlock >
+                                    <apex:pageBlockTable value="{!prods}" var="prod">
+                                        <apex:column >
+                                            <apex:inputCheckbox value="{!prod.isSelected}"/>
+                                        </apex:column>
+                                        <apex:column headerValue="Product Name" value="{!prod.pbe.Product2.Name}"/>
+                                        <apex:column headerValue="Price" value="{!prod.pbe.UnitPrice}"/>
+                                        <apex:column headerValue="Product Code" value="{!prod.pbe.ProductCode}"/>
+                                        <apex:column headerValue="Product Description" value="{!prod.pbe.Product2.Description}"/>
+                                    </apex:pageBlockTable>
+                                </apex:pageBlock>
+                            </apex:form>
+                        </div>
+                        <apex:form >
+                            <footer class="slds-modal__footer">
+                                <apex:commandButton styleClass="slds-button slds-button_neutral" value="Select and Continue" action="{!gotoCustomMultiLine}"/>
+                            </footer></apex:form>
+                    </div>
+                </section>
+                <div class="slds-backdrop slds-backdrop_open">
+                </div>
+            </div>
+        </div>
+    </apex:outputPanel>
     
 </apex:page>
