--- a/pages/VF_CustomOLIEdit.page
+++ b/pages/VF_CustomOLIEdit.page
@@ -7,13 +7,16 @@
         .pbTitle{
         display: none;
         }
+        .datePicker{
+        z-index: 9999;
+        }
     </style>
-    <apex:pageMessages id="msgs"/>
+    
     <apex:outputPanel rendered="{! $User.UIThemeDisplayed == 'Theme3' }">
         <apex:sectionHeader title="Add Products for" subtitle="{!Opportunity.Name}" description="Add products to this opportunity 
                                                                                                  from <b>{!pbName}</b> price book"/>
-        
         <apex:form >
+            <apex:pageMessages id="msgs"/>
             <apex:pageBlock >
                 <apex:pageBlockButtons style="text-align: center;">
                     <apex:actionStatus id="save_status">
@@ -90,14 +93,16 @@
                                                 <td scope="row" data-label="Product Name">
                                                     <div class="slds-form-element">
                                                         <div class="slds-form-element__control">
-                                                            <apex:outputfield value="{!prodNames[oli.PriceBookEntryID]}" styleClass="slds-input" />
+                                                            <div class="slds-truncate" title="Product Name">
+                                                                <apex:outputLink >{!prodNames[oli.PriceBookEntryID]}</apex:outputLink>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td data-label="Quantity">
                                                     <div class="slds-form-element">
                                                         <div class="slds-form-element__control">
-                                                            <apex:outputfield value="{!oli.Quantity}" styleClass="slds-input" />
+                                                            <apex:inputField value="{!oli.Quantity}" styleClass="slds-input" />
                                                         </div>
                                                     </div>
                                                 </td>
@@ -126,14 +131,14 @@
                                         </apex:repeat>
                                     </tbody>
                                 </table>
+                                
+                                <footer class="slds-modal__footer">
+                                    <apex:commandButton styleClass="slds-button slds-button_neutral" value="Save" action="{!saveOLIs}" status="save_status" />
+                                    <apex:commandButton styleClass="slds-button slds-button_neutral" value="Cancel" action="{!gotoOpp}" immediate="true"/>
+                                </footer>
+                                
                             </apex:form>
                         </div>
-                        <apex:form >
-                            <footer class="slds-modal__footer">
-                                <apex:commandButton styleClass="slds-button slds-button_neutral" value="Save" action="{!saveOLIs}" status="save_status" rerender="msgs"/>
-                                <apex:commandButton styleClass="slds-button slds-button_neutral" value="Cancel" action="{!gotoOpp}" immediate="true" rerender="msgs"/>
-                            </footer>
-                        </apex:form>
                     </div>
                 </section>
                 <div class="slds-backdrop slds-backdrop_open">
